--- a/acce.html
+++ b/acce.html
@@ -137,7 +137,7 @@
 	c1.158,5.705,6.202,10,12.249,10C89.404,95,95,89.404,95,82.5S89.404,70,82.5,70c-6.047,0-11.091,4.295-12.249,10H41.356
 	L27.37,58.482l1.268-5.072l-1.212-0.303l10.606-42.425L20.606,6.325l-1.213,4.851l12.575,3.144l-9.394,37.575l-1.212-0.303
 	L16.75,70.038C10.198,70.428,5,75.849,5,82.5C5,89.404,10.596,95,17.5,95z M82.5,77.5c2.757,0,5,2.243,5,5c0,2.757-2.243,5-5,5
-	c-1.842,0-3.437-1.013-4.304-2.5H82.5v-5h-4.305C79.063,78.513,80.658,77.5,82.5,77.5z M16.118,77.719l-1.044,4.175l4.852,1.213
+	c-1.842,0-3.437-1.013-4.DH-2.5H82.5v-5h-4.DHC79.063,78.513,80.658,77.5,82.5,77.5z M16.118,77.719l-1.044,4.175l4.852,1.213
 	l1.048-4.19c0.938,0.909,1.527,2.177,1.527,3.584c0,2.757-2.243,5-5,5s-5-2.243-5-5C12.5,80.226,14.036,78.323,16.118,77.719z" clip-rule="evenodd" />
                   <path class="fill-current text-gray-700 group-hover:text-red-600" d="M6 12a2 2 0 012-2h8a2 2 0 012 2v2a2 2 0 01-2 2H2h2a2 2 0 002-2v-2z" />
                 </svg>
@@ -156,8 +156,8 @@
             <!-- <li class="min-w-max">
               <a href="#" class="group flex items-center space-x-4 rounded-md px-4 py-3 text-gray-600">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 24 24" fill="gray">
-                  <path class="fill-current text-gray-600 group-hover:text-red-600"    d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"/>
-                  <path class="fill-current text-gray-600 group-hover:text-red-300"    d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z" />
+                  <path class="fill-current text-gray-600 group-hover:text-red-600"    d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.DH 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"/>
+                  <path class="fill-current text-gray-600 group-hover:text-red-300"    d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.DH 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z" />
                 </svg>
                 <span class="group-hover:text-gray-700">whatsapp</span>
               </a>
@@ -199,7 +199,7 @@
         </a>
         <div class="mb-5 mt-2 flex items-center justify-between">
           <p>
-            <span class="text-3xl font-bold text-black">250DH</span>
+            <span class="text-3xl font-bold text-black">DH</span>
             <span class="text-sm text-black line-through">500DH</span>
           </p>
           <div class="flex items-center">
@@ -240,7 +240,7 @@
         </a>
         <div class="mb-5 mt-2 flex items-center justify-between">
           <p>
-            <span class="text-3xl font-bold text-black">250DH</span>
+            <span class="text-3xl font-bold text-black">DH</span>
             <span class="text-sm text-black line-through">500DH</span>
           </p>
           <div class="flex items-center">
@@ -281,7 +281,7 @@
         </a>
         <div class="mb-5 mt-2 flex items-center justify-between">
           <p>
-            <span class="text-3xl font-bold text-black">250DH</span>
+            <span class="text-3xl font-bold text-black">DH</span>
             <span class="text-sm text-black line-through">500DH</span>
           </p>
           <div class="flex items-center">
@@ -322,7 +322,7 @@
         </a>
         <div class="mb-5 mt-2 flex items-center justify-between">
           <p>
-            <span class="text-3xl font-bold text-black">250DH</span>
+            <span class="text-3xl font-bold text-black">DH</span>
             <span class="text-sm text-black line-through">500DH</span>
           </p>
           <div class="flex items-center">
@@ -363,7 +363,7 @@
         </a>
         <div class="mb-5 mt-2 flex items-center justify-between">
           <p>
-            <span class="text-3xl font-bold text-black">250DH</span>
+            <span class="text-3xl font-bold text-black">DH</span>
             <span class="text-sm text-black line-through">500DH</span>
           </p>
           <div class="flex items-center">
@@ -404,7 +404,7 @@
         </a>
         <div class="mb-5 mt-2 flex items-center justify-between">
           <p>
-            <span class="text-3xl font-bold text-black">250DH</span>
+            <span class="text-3xl font-bold text-black">DH</span>
             <span class="text-sm text-black line-through">500DH</span>
           </p>
           <div class="flex items-center">
@@ -485,7 +485,7 @@
                     "
                     viewBox="0 0 24 24">
                     <path
-                      d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z" />
+                      d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.DH 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z" />
                   </svg>
                 </button>
                      
@@ -505,7 +505,7 @@
                 <div>
                   <h1 class="text-2xl font-bold  text-gray-900 uppercase ">Find Us</h1>
                   <div class="">
-                  <iframe class="w-3/4 h-3/4 rounded-lg shadow-sm shadow-black" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2503.6311278532676!2d-5.573054456274791!3d33.8575201845286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda05aaf634bac87%3A0x64bfe117d2e27d7d!2sNational%20Graduate%20School%20of%20Arts%20and%20Crafts!5e1!3m2!1sen!2sma!4v1692226531498!5m2!1sen!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                  <iframe class="w-3/4 h-3/4 rounded-lg shadow-sm shadow-black" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2503.6311278532676!2d-5.57DH4456274791!3d33.8575201845286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda05aaf634bac87%3A0x64bfe117d2e27d7d!2sNational%20Graduate%20School%20of%20Arts%20and%20Crafts!5e1!3m2!1sen!2sma!4v1692226531498!5m2!1sen!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                 </div>
             </div>
         </div>
