--- a/index.html
+++ b/index.html
@@ -138,12 +138,28 @@
     
   </div> 
         <!-- Allez Hssaine -->
-
+        
+          <style>
+            @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500;600;700&display=swap');
+          </style>
+          <style>
+            @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+            .josefin-sans {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 700;
+ 
+}
+            .josefin-sans-thin {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 100;
+ 
+}
+          </style>
 
     <div class="grid lg:grid-cols-2 grid-cols-1  lg:gap-14 gap-7">
          <div class="order-1 lg:order-none lg:ml-32 lg:mt-36  mx-10 ">
-            <h1 class="text-5xl font-bold text-red-700 ">Welcome to <br>SH-Scooters </h1>
-            <p class="text-gray-500 font-thin py-7 ">The First Morrocan Online Shop <br>Where You can find anything related <br> to electric Scooters</p>
+            <h1 class="text-5xl font-bold     text-red-700 ">WELCOME TO <br>SH-SCOOTERS </h1>
+            <p class="text-gray-500 josefin-sans font-thin py-7 ">The First Morrocan Online Shop <br>Where You can find anything related <br> to electric Scooters</p>
             <a href="#Startshopping">
             <button  class="rounded-md shadow-sm shadow-red-400 bg-red-600 border-2 border-red-600 px-5 py-2.5 text-center text-sm font-medium text-white  hover:bg-white focus:outline-none hover:text-red-600 0">Start Shopping </button>
           </a>
@@ -165,7 +181,7 @@
     </div>
       <div class="grid lg:mt-36 mt-10  gap-5 grid-cols-3">
         <div class="h-lil lg:mx-6 mt-4 rounded-full bg-red-500"></div>
-        <h1 class="text-center lg:text-2xl font-semibold text-black">Discover Our Technologies</h1>
+        <h1 class="text-center lg:text-2xl josefin-sans  font-semibold text-black">DISCOVER OUR TECHNOLOGIES</h1>
         <div class="h-lil lg:mx-6 mt-4 rounded-full bg-red-500"></div>
       </div>
       <div id="Startshopping" class=" flex flex-wrap grow place-content-center gap-1  ">
@@ -179,10 +195,10 @@
   </div>  
   <div class="p-6">
 
-    <h5 class=":text-neutral-50 mb-2 relative  bottom-20 text-2xl font-bold leading-tight text-red-600 text-center">High Speed</h5>
-    <p class=":text-neutral-200 mb-4 text-base relative bottom-10 text-neutral-600">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class=":text-neutral-50 mb-2 relative  bottom-20 text-2xl josefin-sans font-bold leading-tight text-red-600 text-center">High Speed</h5>
+    <p class=":text-neutral-200 mb-4 text-base relative bottom-10 josefin-sans text-neutral-600">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="scooters.html">
-    <button type="button" class="w-full hover:bg-primary-600 focus:bg-primary-600 active:bg-primary-700 :shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] :hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] :focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] :active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] inline-block rounded bg-red-600 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)]" data-te-ripple-init data-te-ripple-color="light">BUY</button></a>
+    <button type="button" class="w-full  hover:bg-primary-600 focus:bg-primary-600 active:bg-primary-700 :shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] :hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] :focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] :active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] inline-block rounded bg-red-600 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)]" data-te-ripple-init data-te-ripple-color="light">BUY</button></a>
   </div>
 </div>
  
@@ -195,8 +211,8 @@
   </div>  
   <div class="p-6">
 <a href="scooters.html">
-    <h5 class=":text-neutral-50 mb-2 relative  bottom-20 text-2xl font-bold leading-tight text-red-600 text-center">Foldable</h5>
-    <p class=":text-neutral-200 mb-4 text-base relative bottom-10 text-neutral-600">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class=":text-neutral-50 mb-2 relative  bottom-20 josefin-sans text-2xl font-bold leading-tight text-red-600 text-center">Foldable</h5>
+    <p class=":text-neutral-200 mb-4 text-base relative josefin-sans bottom-10 text-neutral-600">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <button  type="button" class="w-full rounded hover:bg-primary-600 focus:bg-primary-600 active:bg-primary-700 :shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] :hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] :focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] :active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]  bg-red-600 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)]" data-te-ripple-init data-te-ripple-color="light">BUY</button></a>
   </div>
 </div>
@@ -209,8 +225,8 @@
   </div>  
   <div class="p-6">
 
-    <h5 class=":text-neutral-50 mb-2 relative  bottom-20 text-2xl font-bold leading-tight text-red-600 text-center">Accessories</h5>
-    <p class=":text-neutral-200 mb-4 text-base relative bottom-10 text-neutral-600">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class=":text-neutral-50 mb-2 relative  bottom-20 text-2xl josefin-sans font-bold leading-tight text-red-600 text-center">Accessories</h5>
+    <p class=":text-neutral-200 mb-4 text-base relative bottom-10 josefin-sans text-neutral-600">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="acce.html">
     <button  type="button" class="w-full hover:bg-primary-600 focus:bg-primary-600 active:bg-primary-700 :shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] :hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] :focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] :active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] inline-block rounded bg-red-600 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)]" data-te-ripple-init data-te-ripple-color="light">BUY</button></a>
   </div>
@@ -218,13 +234,13 @@
 </div>
 <div class=" relative" id="abousys">
 <img src="images/w9.png" class="image2 mt-32  "   alt="">
-<h1 class=" absolute text-white text-4xl lg:text-5xl font-bold top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 ">Among Us</h1>
+<h1 class=" absolute text-white text-4xl lg:text-5xl font-bold top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 ">About Us</h1>
 </div>
 <div>
   
     <div class="mx-10 mt-10 flex-wrap  grid grid-cols-1 lg:grid-cols-2 items-center gap-10 lg:py-16 lg:mx-40">
       <div class=" font-light text-gray-500 sm:text-lg">
-        <h2 class=" mb-4 text-4xl font-extrabold tracking-tight text-blue-900">Who Are We?</h2>
+        <h2 class=" mb-4 text-4xl font-extrabold tracking-tight text-red-600">Who Are We?</h2>
         <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur dicta consequuntur fugiat, exercitationem omnis ratione beatae iure aliquam repudiandae accusantium maiores eligendi quidem minima. Ab est, sed harum accusamus rem inventore ipsa praesentium reprehenderit sint dolorum, tenetur quasi quod eos esse doloremque perferendis? Perspiciatis laborum similique, quaerat fugit itaque obcaecati doloremque labore autem, fugiat eum quo odio voluptas iste. Temporibus ipsum alias repellendus nobis quam doloribus ea vero ducimus totam suscipit explicabo magni laboriosam, tempora ab id repudiandae sunt. Quaerat sequi porro, iusto debitis ipsa fugit hic? Suscipit magni repellat nemo impedit commodi, dolorem temporibus, exercitationem voluptatem fugiat doloremque assumenda!</p>
       </div>
       <div class="flex justify-center lg:justify-end"> <!-- Use flex to align image to the right -->
@@ -321,10 +337,10 @@
               <h1 class="text-2xl font-bold  text-gray-900 uppercase ">Help </h1>
                 <ul class="text-gray-500 dark:text-gray-400 font-medium">
                     <li class="mt-6 mb-6">
-                        <a href="#" class="hover:underline ">SPACE CLUB</a>
+                        <a href="#" class="hover:underline ">Lorem, ipsum dolor.</a>
                     </li>
                     <li>
-                        <a href="#" class="hover:underline">A7SEN CLUB</a>
+                        <a href="#" class="hover:underline">Lorem, ipsum dolor.</a>
                     </li>
                 </ul>
             </div>
