--- a/scooters.html
+++ b/scooters.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/output.css">
     <link rel="stylesheet" href="css/me.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
@@ -47,6 +48,29 @@
   <!-- Your actual content here -->
 
 <body class="bg-[#eaeaea]">
+  <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+    </a>
+    <style>
+      .float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
+.my-float{
+	margin-top:16px;
+}
+    </style>
   
 
   <div class="flex justify-center">
@@ -252,7 +276,7 @@
 
   <div class="l3iba2 ">
     <div class="grid grid-cols-1">
-    <div class=" mt-20 flex items-center justify-center">
+    <div class="fade-in-element mt-20 flex items-center justify-center">
   <div>
       <img src="images/gnbgngngng.png" class="carta" alt="">
       <!-- <div class="relative mb-0 h-[150px]  w-[230px] ml-[4.25rem] bg-red-500 rounded-md shadow-black shadow-2xl">
@@ -293,7 +317,7 @@
 
   </div>
 
-  <div class=" mt-20 ml-10 flex items-center justify-center">
+  <div class="fade-in-element mt-20 ml-10 flex items-center justify-center">
     <div>
         <img src="images/gnbgngngng.png" class="carta" alt="">
         <!-- <div class="relative mb-0 h-[150px]  w-[230px] ml-[4.25rem] bg-red-500 rounded-md shadow-black shadow-2xl">
@@ -376,14 +400,38 @@
 </div>
   </div>
 
+  <style>
+    .fade-in-element {
+    opacity: 0; /* Initially set the opacity to 0 */
+    animation: fadeIn 1s ease-in-out forwards; /* Apply the animation */
+}
 
+.fade-in-element {
+    opacity: 0; /* Initially set the opacity to 0 */
+    position: relative; /* Enable positioning for animation */
+    left: -20px; /* Start off the screen to the left */
+    animation: fadeInLeft 0.5s ease-in-out forwards; /* Apply the animation */
+}
+
+@keyframes fadeInLeft {
+    from {
+        opacity: 0; /* Start with fully transparent */
+        left: -20px; /* Start off the screen to the left */
+    }
+    to {
+        opacity: 1; /* End with fully opaque */
+        left: 0; /* Move to the normal position */
+    }
+}
+
+   </style>
   
 <div class="l3iba ">
 <div class="grid grid-cols-1">
   
-  <div class=" mt-20 flex items-center justify-center">
+  <div class="fade-in-element mt-20 flex items-center justify-center">
    
-    <img src="images/433853.png"  class="cart" alt="">
+    <img src="images/hak.png"  class="" alt="">
   
     <div class="relative   lg:h-[540px]  lg:w-[24rem] rounded-xl  bg-white shadow-black shadow-2xl">
       <h2 class="z-20 float-right mr-5 mt-8 font-bold text-4xl font-[Rajdhani] block">2000Dhs</h2>
@@ -441,9 +489,9 @@
   
   </style>
 
-  <div class="dakchi mt-20 ml-10 flex items-center  justify-center">
-   
-    <img src="images/xfbfb.png"  class="" alt="">
+  <div class="dakchi fade-in-element mt-20 ml-[-0.5rem] flex items-center  justify-center">
+   0
+    <img src="images/xfbfb (3).png"  class="" alt="">
   
     <div class="relative   h-[540px]  w-[24rem] rounded-xl bg-white shadow-black shadow-2xl">
       <h2 class="z-20 float-right mr-5 mt-8 font-bold text-4xl font-[Rajdhani] block">2000Dhs</h2>
