--- a/acce.html
+++ b/acce.html
@@ -33,7 +33,7 @@
 	margin-top:16px;
 }
     </style>
-  
+
 
   <div class="flex justify-center">
 
@@ -520,10 +520,10 @@
                   <h1 class="text-2xl font-bold  text-gray-900 uppercase ">Help </h1>
                     <ul class="text-gray-500 dark:text-gray-400 font-medium">
                         <li class="mt-6 mb-6">
-                            <a href="#" class="hover:underline ">SPACE CLUB</a>
+                            <a href="#" class="hover:underline ">Lorem, ipsum dolor.</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:underline">A7SEN CLUB</a>
+                            <a href="#" class="hover:underline">Lorem, ipsum dolor.</a>
                         </li>
                     </ul>
                 </div>
