--- a/scooters.html
+++ b/scooters.html
@@ -490,7 +490,7 @@
   </style>
 
   <div class="dakchi fade-in-element mt-20 ml-[-0.5rem] flex items-center  justify-center">
-   0
+   
     <img src="images/xfbfb (3).png"  class="" alt="">
   
     <div class="relative   h-[540px]  w-[24rem] rounded-xl bg-white shadow-black shadow-2xl">
@@ -609,10 +609,10 @@
               <h1 class="text-2xl font-bold  text-gray-900 uppercase ">Help </h1>
                 <ul class="text-gray-500 dark:text-gray-400 font-medium">
                     <li class="mt-6 mb-6">
-                        <a href="#" class="hover:underline ">SPACE CLUB</a>
+                        <a href="#" class="hover:underline ">Lorem, ipsum dolor.</a>
                     </li>
                     <li>
-                        <a href="#" class="hover:underline">A7SEN CLUB</a>
+                        <a href="#" class="hover:underline">Lorem, ipsum dolor.</a>
                     </li>
                 </ul>
             </div>
