--- a/S9PLUS.html
+++ b/S9PLUS.html
@@ -759,7 +759,7 @@ https://flickity.metafizzy.co
                     </div>
                   </div> -->
                   <div class="shadow-xl rounded-xl bg-zinc-100 border-red-300 border-solid border-2">
-                    <div class="grid  grid-cols-1 place- mt-10">
+                    <div class="grid  grid-cols-1 w-3/4 place- mt-10">
 
                       <div class="flex mt-8 flex-wr mb-8 items-center">
                         <div class="w-32 text-l font-semibold text-center mr-4">Speed</div>
