--- a/scooters.html
+++ b/scooters.html
@@ -368,7 +368,7 @@
   </style>
 
   <div class="l3iba2 ">
-    <div class="grid grid-cols-1">
+    <div class="grid grid-cols-1 w-[450px]">
     <div class="fade-in-element ml-10 mt-20 flex items-center justify-center">
       <div class="swiper ">    
         <div class="swiper-wrapper">
